Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.

2007-aug-10 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ eeschema
	better hotkeys.cpp code.


2007-Aug-08 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew & common
    Released the new Visitor paradigm.   Wrote MODULE::FindPadOrModule() using
    it.


2007-aug-09 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ eeschema
	Some new hotkeys (see hotkeys.cpp).
	Now, the key ? display the current existing hotkeys


2007-Aug-08 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew & common
  * Renamed locate.cpp's distance() to DistanceTest() and moved it to trigo.cpp.
    Pass more parameters to DistanceTest and removed globals that were used by 
    distance() in locate.cpp.  
    Moved and renamed DistanceTest function proto from protos.h to trigo.h.
  * Implemented HitTest() for class_cotation, class_mire, and a few other classes
    by factoring out existing code from locate.cpp.  locate.cpp should operate
    exactly the same as before.
  * Improved or implemented the Show() function for several classes.
  * Detected that the suspected class_module hit-testing bug was not real, 
    i.e. no bug found.
  

2007-aug-08 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ eeschema
	bug in class_hierarchy_sheet.cpp.

+ pcbnew
	small change in block commands:
		rastnest was updated for each footprint, while moving footprints.
		Now it is updated at the end of changes.